# putzplan

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  README_DEVELOPMENT.md  RUN_CI_INSTRUCTIONS.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline_hardened_schema.py  0002_sprint1_users_and_permissions.py  0003_atomic_refresh_and_session_binding.py  0004_refresh_rotation_state.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  errors.py
backend/app/db/: session.py
backend/app/domain/: models.py
backend/app/observability/: logging.py  metrics.py
backend/app/repositories/: audit_repo.py  auth_repo.py  role_repo.py  user_repo.py
backend/app/security/: csrf.py  passwords.py  rate_limit.py  tokens.py
backend/app/services/: audit_service.py  auth_service.py  project_service.py  role_service.py  user_service.py
backend/scripts/: seed_container.py
backend/tests/: conftest.py  smoke_compose.py  smoke_vertical_slice.py  test_integration_auth.py  test_integration_csrf.py  test_integration_identity_binding.py  test_integration_rate_limit_redis.py  test_integration_refresh_concurrency.py  test_integration_tenant.py  test_integration_users_roles.py  test_migration_cycle.py  test_openapi_compat.py  test_unit_permissions.py  test_unit_security.py
backend/tests/fixtures/: openapi_added_path_ok.json  openapi_added_property_ok.json  openapi_base.json  openapi_changed_type.json  openapi_field_became_required.json  openapi_removed_enum.json  (+4 more)
(+75 files in other folders)
